fix home padding that ruined serviceCard alignments. move mailForm to its own component

--- a/app/components/contact.css
+++ b/app/components/contact.css
@@ -1,8 +1,10 @@
 .contact-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   grid-template-areas:
-    "form-content location-content";
+    "form-content location-content"
+    "form-content contact-info";
   grid-gap: 32px;
 }
 
@@ -11,6 +13,7 @@
   border-radius: 5px;
   background: var(--accent-color-2);
   padding: 16px;
+  height: 700px;
 }
 
 .form-content input[type='text'],
@@ -25,7 +28,11 @@
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  resize: vertical;
+  resize: none;
+}
+
+.form-content textarea {
+  height: 128px;
 }
 
 .form-content input[type='submit'] {
@@ -51,4 +58,8 @@
   height: 400px;
   background-color: grey;
   border-radius: 4px;
+}
+
+.contact-info {
+  grid-area: contact-info;
 }
