--- a/app/components/home.css
+++ b/app/components/home.css
@@ -40,9 +40,8 @@
 }
 
 @media (min-width: 1270px) {
-  .home-container {
-    padding-left: 300px;
-    padding-right: 300px;
+  .home-intro-container {
+    width: 1270px;
   }
 
 
